fix: safari button overflow with border-radius

--- a/studio/src/app/popovers/core/app-new/app-new.scss
+++ b/studio/src/app/popovers/core/app-new/app-new.scss
@@ -19,8 +19,6 @@ app-new {
       height: 7rem;
       width: 7rem;
 
-      overflow: hidden;
-
       padding: 16px 0;
 
       border-radius: 50%;
